--- a/web/index.html
+++ b/web/index.html
@@ -10,18 +10,19 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Меню</a></li>
-                <li><a href="#">Акції</a></li>
-                <li><a href="#">Про нас</a></li>
-                <li><a href="#">Контакти</a></li>
-                <li><a href="#">Вхід</a></li>
+                <img class="logo-img" src="images/logo.png" alt="Burger World logo">
+                <li><a class="nav-btn" href="#">Меню</a></li>
+                <li><a class="nav-btn" href="#section1">Акції</a></li>
+                <li><a class="nav-btn" href="#section2">Про нас</a></li>
+                <li><a class="nav-btn" href="#section3">Контакти</a></li>
+                <li><a class="nav-btn" href="#section4">Вхід</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="section1">
             <h1>Заголовок 1</h1>
-            <p>гівгрвщшфошьівідлвщфзлвщізлфі</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dolore rem eligendi quaerat ducimus aliquam molestiae dolorem, repudiandae reiciendis nihil debitis pariatur laborum quibusdam, ipsa tempore est eaque ratione perspiciatis.</p>
             <button>Перейти на сторінку 2</button>
         </section>
         <section class="section2">
@@ -54,20 +55,133 @@
                 </div>
             </div>
         </section>
+        <section id="section3">
+            <h2 class="h2"></h2>
+            <div id="products">
+                <article class="product">
+                    <img src="images/product1.jpg" alt="Продукт 1">
+                    <h3>Продукт 1</h3>
+                    <p>Текст опису продукта 1</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product2.jpg" alt="Продукт 2">
+                    <h3>Продукт 2</h3>
+                    <p>Текст опису продукта 2</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product3.jpg" alt="Продукт 3">
+                    <h3>Продукт 3</h3>
+                    <p>Текст опису продукта 3</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product4.jpg" alt="Продукт 4">
+                    <h3>Продукт 4</h3>
+                    <p>Текст опису продукта 4</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product5.jpg" alt="Продукт 5">
+                    <h3>Продукт 5</h3>
+                    <p>Текст опису продукта 5</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product6.jpg" alt="Продукт 6">
+                    <h3>Продукт 6</h3>
+                    <p>Текст опису продукта 6</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product7.jpg" alt="Продукт 7">
+                    <h3>Продукт 7</h3>
+                    <p>Текст опису продукта 7</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product8.jpg" alt="Продукт 8">
+                    <h3>Продукт 8</h3>
+                    <p>Текст опису продукта 8</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product9.jpg" alt="Продукт 9">
+                    <h3>Продукт 9</h3>
+                    <p>Текст опису продукта 9</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product10.jpg" alt="Продукт 10">
+                    <h3>Продукт 10</h3>
+                    <p>Текст опису продукта 10</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product11.jpg" alt="Продукт 11">
+                    <h3>Продукт 11</h3>
+                    <p>Текст опису продукта 11</p>
+                    <a href="#">Купити</a>
+                </article>
+                <article class="product">
+                    <img src="images/product12.jpg" alt="Продукт 12">
+                    <h3>Продукт 12</h3>
+                    <p>Текст опису продукта 12</p>
+                    <a href="#">Купити</a>
+                </article>
+            </div>
+        </section>
+        <section id="section4">
+            <h2>Про нас</h2>
+            <p class="about-text">
+                <b>Ласкаво просимо до Burger World</b>
+                <br>
+                <br>
+                Ми — команда, яка з великою пристрастю готує для вас найсмачніші та найсвіжіші бургери, 
+                використовуючи тільки найкращі інгредієнти.
+                <br>
+                <br>
+                <b>Справжній гастрономічний досвід</b>
+                <br>
+                <br>
+                У Burger World кожен бургер — це не просто їжа, це справжній гастрономічний досвід. 
+                Ми пропонуємо великий вибір класичних бургерів, а також ексклюзивні рецепти для тих, 
+                хто шукає щось особливе. Від соковитих м’ясних котлет 
+                до вегетаріанських і веганських варіантів — у нас кожен знайде бургер до душі.
+                <br>
+                <br>
+                <b>Якість та свіжість на першому місці</b>
+                <br>
+                <br>
+                Ми цінуємо якість і свіжість, тому наші продукти завжди готуються на очах у вас, 
+                з максимальною увагою до деталей. У Burger World ви можете бути впевнені, 
+                що кожен бургер відповідає найвищим стандартам.
+                <br>
+                <br>
+                Приходьте до нас, і ми обіцяємо, що ваш обід чи вечеря стануть справжнім святом смаку!
+            </p>
+        </section>
     </main>
     <footer>
-        <p>2025 крутий сайт. Всі права не захищені.</p>
-        <ul>
-            <li><a href="#">Політика конфіденційності</a></li>
-            <li><a href="#">Долучитися до команди</a></li>
-            <li><a href="#">Статистика</a></li>
-            <li><a href="#">Контакти</a></li>
-        </ul>
-        <div id="social">
-            <a href=""><img src="images/facebook.png" alt="Facebook"></a>
-            <a href=""><img src="images/instagram.png" alt="Instagram"></a>
-            <a href=""><img src="images/twitter.png" alt="Twitter"></a>
-            <a href=""><img src="images/youtube.png" alt="Youtube"></a>
+        <div class="footer-content">
+            <div clas="footer-left">
+                <p>&copy;2025 Burger World. Всі права захищені.</p>
+                <ul>
+                    <li><a class="nav-btn" href="#">Політика конфіденційності</a></li>
+                    <li><a class="nav-btn" href="#">Долучитися до команди</a></li>
+                    <li><a class="nav-btn" href="#">Статистика</a></li>
+                    <li><a class="nav-btn" href="#">Контакти</a></li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <div id="social">
+                    <a class="links" href="#"><img src="images/facebook.png" alt="Facebook"></a>
+                    <a class="links" href="#"><img src="images/instagram.png" alt="Instagram"></a>
+                    <a class="links" href="#"><img src="images/twitter.png" alt="Twitter"></a>
+                    <a class="links" href="#"><img src="images/youtube.png" alt="Youtube"></a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
